--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Trade+Winds&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body{
+    font-family: 'Roboto', sans-serif;
 }
 
 #burger{
@@ -9,6 +13,8 @@
     top: 1rem;
     left: 1rem;
     cursor: pointer;
+    z-index: 1;
+
 
 }
 
@@ -17,4 +23,28 @@
     height: 2px;
     background-color: black;
     margin: 6px;
+}
+
+.menu{
+    width: 360px;
+    height: 100vh;
+    background-color: rgb(88, 88, 88);
+    padding-top: 60px;
+    position: fixed;
+}
+
+.abierto{
+    left:-360px;
+}
+.menu nav{
+    display: flex;
+    flex-direction: column;
+
+}
+a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.561);
+}
+.menu nav a{
+    padding: .5rem 1rem;
 }
