--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Trade+Winds&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
+/* Reseteo CSS */
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif; 
 }
 
+a{
+    text-decoration: none;
+}
+/* botón burguer */
 #burger{
-    position: fixed;
-    top: 1rem;
+    position: absolute;
+    top:1rem;
     left: 1rem;
-    cursor: pointer;
-    z-index: 1;
-
-
+    cursor:pointer;
+    z-index:1;
 }
 
 #burger .barra{
     width: 30px;
     height: 2px;
-    background-color: black;
     margin: 6px;
+    background-color:#a97c50;
+    transition: 400ms all ease-in-out;
 }
 
+#burger.abierto .barra{
+    background-color: white;
+}
+/*transforaciones*/
+
+#burger.abierto .barra.superior{
+    transform:translateY(8px) rotateZ(45deg);
+}
+#burger.abierto .barra.media{
+    width: 0;
+}
+#burger.abierto .barra.inferior{
+    transform:translateY(-8px) rotateZ(-45deg);
+}
+
+/* Menú Lateral */
 .menu{
     width: 360px;
     height: 100vh;
-    background-color: rgb(88, 88, 88);
-    padding-top: 60px;
+    background-color: #424242;
     position: fixed;
+    top:0;
+    left:-360px; /*al ppio esto estaba en 0 pero se va a desplazar, por eso se esconde con -*/
+    padding-top: 40px;
+    transition: all 300ms ease-in-out;
 }
 
-.abierto{
-    left:-360px;
+.menu.abierto{ /*esta clase se va a crear con jquery.Cuando se de click al botón burguer jquery añadirá la clase abierto*/
+    left:0
 }
+
 .menu nav{
+    padding: 1rem;
     display: flex;
     flex-direction: column;
+}
 
-}
-a{
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.561);
-}
 .menu nav a{
-    padding: .5rem 1rem;
+    padding: 0.6rem 0;
+    color: rgba(255, 255, 255, 0.541);
+    font-size: 1.1rem;
+    transition: 300ms all ease-in-out;
+}
+
+.menu nav a:hover{
+    color: white;
+}
+
+.menu .copyright{
+    color: rgba(255, 255, 255, 0.541);
+    font-family: 0.9rem;
+    position: absolute;
+    bottom:0;
+    left:0;
+    padding: 0.5rem;
+    text-align: center;
+    width: 100%;/*No entiendo esto, se necesita un 100% para que afecte al text-align*/
 }
