--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,13 @@ a{
 }
 /*transforaciones*/
 
-#burger.abierto .barra.superior{
+#burger.abierto .barra.sup{
     transform:translateY(8px) rotateZ(45deg);
 }
-#burger.abierto .barra.media{
+#burger.abierto .barra.med{
     width: 0;
 }
-#burger.abierto .barra.inferior{
+#burger.abierto .barra.inf{
     transform:translateY(-8px) rotateZ(-45deg);
 }
 
@@ -53,7 +53,7 @@ a{
     top:0;
     left:-360px; /*al ppio esto estaba en 0 pero se va a desplazar, por eso se esconde con -*/
     padding-top: 40px;
-    transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;/*Se necesita posicionar y poner top y left para que funcione la transición*/
 }
 
 .menu.abierto{ /*esta clase se va a crear con jquery.Cuando se de click al botón burguer jquery añadirá la clase abierto*/
